--- a/app/assets/stylesheets/partials/dashboard/_banner.sass
+++ b/app/assets/stylesheets/partials/dashboard/_banner.sass
@@ -15,22 +15,3 @@
 /* BANNER SECTION */
 $bannerHeight: 350px
 $nav-height: 55px
-nav
-    background: #ffffff
-    #navigation
-        a:not(.button)
-            color: $darkb-accent
-            font-weight: bolder
-        a.title
-            color: $darkb-accent
-    #sub-banner
-        background: $bg-gradient
-        > .min-container
-            padding: 1rem
-            h1.page-title
-                margin: 0
-                color: $darkb-accent
-                font-family: Roboto
-                font-size: 1.1rem
-                text-transform: uppercase
-                font-weight: 100
